syntax = "proto3";

package obd.v1;
import "obd/v1/car/entity.proto";



message CarUpdateRequest {
    int64 car_id = 1;
    int64 car_brand_model_id = 2;
    int32 model_year = 3;
    
    
}
    
message CarUpdateResponse {
    Car car = 1;
}